--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="styles.css">
-<title>Colegio Monteiro<title>
+<title>Colegio Monteiro</title>
 </head>
-        <body>
+    <body>
 <h1>combos incriveis do BLOX FRUIS</h1>
   <h2>  como fazer combos do jogo conceito basico de combos</h2>
-        <img>https://github-production-user-asset-6210df.s3.amazonaws.com/141460489/258667423-438a0e31-01f1-42b2-a7df-9aa269971a37.png<img>
- 
+        <img>https://github-production-user-asset-6210df.s3.amazonaws.com/141460489/258667423-438a0e31-01f1-42b2-a7df-9aa269971a37.png
+        <img>
+        
 <h3> explicando o jogo </h3>
      <p> Blox Fruits é um jogo de aventura em mundo aberto que se destaca pelos seus incríveis combates. Os jogadores podem explorar diversas ilhas, enfrentar inimigos poderosos e muitas coisas legais como frutas que dao poderes especiais</p>
    <p> o jogo e baseado em um anime chamado <b> one piece</b> que contem piratas e frutas que dão poderes mais conhecida como <b>fruto do diabo</b></p>
@@ -20,8 +21,6 @@
 <h3> explicando combos </h3>
 
 <p>Um dos destaques mais interessantes do jogo é a mecânica de combos de combate. Cada personagem disponível possui um conjunto de <b>habilidades e ataques especiais</b>. Ao combinar essas habilidades de forma inteligente e precisa, os jogadores podem desencadear sequências de golpes poderosos. Usando varios estilos de lutas e espadas conseguem fazer isso.</p>
-
-<a href="https://www.bloxfruisaleaorio012.com" target="_blank">Clique aqui para visitar o site</a>
 
 <h4>alguns jogadores da escola são</h4>
 <table>
