--- a/index.html
+++ b/index.html
@@ -1,39 +1,117 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="styles.css">
-<title>Colegio Monteiro</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="styles.css">
+  <title>Colegio Monteiro</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #0073e6;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 36px;
+    }
+
+    h2 {
+      font-size: 24px;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+
+    h3 {
+      font-size: 24px;
+    }
+
+    p {
+      font-size: 16px;
+      margin: 10px 0;
+    }
+
+    b {
+      font-weight: bold;
+    }
+
+    h4 {
+      font-size: 20px;
+      margin-top: 20px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+
+    td {
+      padding: 5px;
+      border: 1px solid #ddd;
+      text-align: center;
+    }
+
+    footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+    }
+  </style>
 </head>
-    <body>
-<h1>combos incriveis do BLOX FRUIS</h1>
-  <h2>  como fazer combos do jogo conceito basico de combos</h2>
-        <img>https://github-production-user-asset-6210df.s3.amazonaws.com/141460489/258667423-438a0e31-01f1-42b2-a7df-9aa269971a37.png
-        <img>
-        
-<h3> explicando o jogo </h3>
-     <p> Blox Fruits é um jogo de aventura em mundo aberto que se destaca pelos seus incríveis combates. Os jogadores podem explorar diversas ilhas, enfrentar inimigos poderosos e muitas coisas legais como frutas que dao poderes especiais</p>
-   <p> o jogo e baseado em um anime chamado <b> one piece</b> que contem piratas e frutas que dão poderes mais conhecida como <b>fruto do diabo</b></p>
-
-<h3> explicando combos </h3>
-
-<p>Um dos destaques mais interessantes do jogo é a mecânica de combos de combate. Cada personagem disponível possui um conjunto de <b>habilidades e ataques especiais</b>. Ao combinar essas habilidades de forma inteligente e precisa, os jogadores podem desencadear sequências de golpes poderosos. Usando varios estilos de lutas e espadas conseguem fazer isso.</p>
-
-<h4>alguns jogadores da escola são</h4>
-<table>
-  <tr>
-    <td>Lohan</td>
-    <td>nathaly(outra sala)</td>
-    <td>Adriano</td>
-    <td>luan</td>
-    <td>kevin(outra sala)</td>
-  </tr>
-</table>
-<footer>
-  <p>Nome: Bruno | Número: 8 | 1-B </p>
-</footer>
+<body>
+  <header>
+    <h1>Combos Incríveis do Blox Fruits</h1>
+    <h2>Como Fazer Combos no Jogo - Conceito Básico de Combos</h2>
+  </header>
+  <main>
+    <section>
+      <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/141460489/258667423-438a0e31-01f1-42b2-a7df-9aa269971a37.png" alt="Imagem do jogo Blox Fruits">
+      <h3>Explicando o Jogo</h3>
+      <p>
+        Blox Fruits é um jogo de aventura em mundo aberto que se destaca pelos seus incríveis combates. Os jogadores podem explorar diversas ilhas, enfrentar inimigos poderosos e muitas coisas legais como frutas que dão poderes especiais.
+      </p>
+      <p>
+        O jogo é baseado em um anime chamado <b>One Piece</b>, que contém piratas e frutas que dão poderes, mais conhecidas como <b>fruto do diabo</b>.
+      </p>
+    </section>
+    <section>
+      <h3>Explicando Combos</h3>
+      <p>
+        Um dos destaques mais interessantes do jogo é a mecânica de combos de combate. Cada personagem disponível possui um conjunto de <b>habilidades e ataques especiais</b>. Ao combinar essas habilidades de forma inteligente e precisa, os jogadores podem desencadear sequências de golpes poderosos. Usando vários estilos de luta e espadas conseguem fazer isso.
+      </p>
+    </section>
+    <section>
+      <h4>Alguns Jogadores da Escola</h4>
+      <table>
+        <tr>
+          <td>Lohan</td>
+          <td>Nathaly (outra sala)</td>
+          <td>Adriano</td>
+          <td>Luan</td>
+          <td>Kevin (outra sala)</td>
+        </tr>
+      </table>
+    </section>
+  </main>
+  <footer>
+    <p>Nome: Bruno | Número: 8 | 1-B</p>
+  </footer>
 </body>
 </html>
